--- a/search.html
+++ b/search.html
@@ -22,11 +22,13 @@
             <button type="submit">Search</button>
         </form>
 
-        <div id="search-result"></div>
+        <div id="search-result">
+            <!-- Search results will be displayed here -->
+        </div>
 
         <button id="show-more">Show More</button>
     </div>
 
-    <script src="scriptTest.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
